target/.antlr/CSlangParser.java
// Generated from d:/y4_hk1/ppl/assignment2-initial/assignment2-initial/pplAssignment/target/CSlang.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CSlangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NULL=1, SELF=2, CONTRUCTOR=3, IF=4, ELSE=5, FOR=6, CONTINUE=7, BREAK=8, 
		RETURN=9, VOID=10, FUNCTION=11, NEW=12, CONST=13, VAR=14, CLASS=15, LCB=16, 
		RCB=17, SEMI=18, COLON=19, RARROW=20, EQUAL=21, COMMA=22, INT=23, FLOAT=24, 
		SIGN=25, RB=26, LB=27, LSB=28, RSB=29, STRING_OP=30, EQ_OP=31, NEQ_OP=32, 
		LT_OP=33, GT_OP=34, LEQ_OP=35, GEQ_OP=36, AND_OP=37, OR_OP=38, ADD_OP=39, 
		SUB_OP=40, MUL_OP=41, F_DIV_OP=42, NOT_OP=43, I_DIV_OP=44, REM_OP=45, 
		BOOL=46, DOT=47, STRING=48, ASSGIN_OP=49, INTLIT=50, FLOATLIT=51, BOOLLIT=52, 
		TRUE=53, FALSE=54, DIM=55, STRINGLIT=56, WS=57, C_COMMENT=58, CPP_COMMENT=59, 
		ID=60, UNCLOSE_STRING=61, ILLEGAL_ESCAPE=62, ERROR_CHAR=63;
	public static final int
		RULE_program = 0, RULE_classdecl = 1, RULE_classbody = 2, RULE_const_decl = 3, 
		RULE_full_form_const = 4, RULE_var_decl = 5, RULE_short_form = 6, RULE_short_identifier_list = 7, 
		RULE_full_form = 8, RULE_identifier_list = 9, RULE_expression_list = 10, 
		RULE_expr = 11, RULE_expr0 = 12, RULE_expr1 = 13, RULE_expr2 = 14, RULE_expr3 = 15, 
		RULE_expr4 = 16, RULE_expr5 = 17, RULE_expr6 = 18, RULE_expr7 = 19, RULE_expr8 = 20, 
		RULE_expr9 = 21, RULE_expr10 = 22, RULE_expr11 = 23, RULE_array_idx = 24, 
		RULE_index_expression = 25, RULE_operands = 26, RULE_subexpression = 27, 
		RULE_compare_ops = 28, RULE_whole_type = 29, RULE_core_type = 30, RULE_id_type = 31, 
		RULE_at_id = 32, RULE_arr_type = 33, RULE_class_create = 34, RULE_funct_declare = 35, 
		RULE_funct_prototype = 36, RULE_params = 37, RULE_parameter_list = 38, 
		RULE_parameter_declare = 39, RULE_funct_body = 40, RULE_function_call_stmt = 41, 
		RULE_function_call = 42, RULE_function_call_params = 43, RULE_function_call_param_list = 44, 
		RULE_funct_return_type = 45, RULE_continue_statement = 46, RULE_break_statement = 47, 
		RULE_return_statement = 48, RULE_block_statement = 49, RULE_stateVinhs = 50, 
		RULE_stateVinh = 51, RULE_assignment_statement = 52, RULE_assignment_content = 53, 
		RULE_lhs = 54, RULE_assign_expressions = 55, RULE_if_statement = 56, RULE_pre_state = 57, 
		RULE_bool_expression = 58, RULE_true_statements = 59, RULE_else_expression = 60, 
		RULE_for_statement = 61, RULE_for_body = 62;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classdecl", "classbody", "const_decl", "full_form_const", 
			"var_decl", "short_form", "short_identifier_list", "full_form", "identifier_list", 
			"expression_list", "expr", "expr0", "expr1", "expr2", "expr3", "expr4", 
			"expr5", "expr6", "expr7", "expr8", "expr9", "expr10", "expr11", "array_idx", 
			"index_expression", "operands", "subexpression", "compare_ops", "whole_type", 
			"core_type", "id_type", "at_id", "arr_type", "class_create", "funct_declare", 
			"funct_prototype", "params", "parameter_list", "parameter_declare", "funct_body", 
			"function_call_stmt", "function_call", "function_call_params", "function_call_param_list", 
			"funct_return_type", "continue_statement", "break_statement", "return_statement", 
			"block_statement", "stateVinhs", "stateVinh", "assignment_statement", 
			"assignment_content", "lhs", "assign_expressions", "if_statement", "pre_state", 
			"bool_expression", "true_statements", "else_expression", "for_statement", 
			"for_body"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'null'", "'self'", "'contructor'", "'if'", "'else'", "'for'", 
			"'continue'", "'break'", "'return'", "'void'", "'func'", "'new'", "'const'", 
			"'var'", "'class'", "'{'", "'}'", "';'", "':'", "'<-'", "'='", "','", 
			"'int'", "'float'", "'@'", "')'", "'('", "'['", "']'", "'^'", "'=='", 
			"'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", "'||'", "'+'", "'-'", "'*'", 
			"'/'", "'!'", null, "'%'", "'bool'", "'.'", "'string'", "':='", null, 
			null, null, "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NULL", "SELF", "CONTRUCTOR", "IF", "ELSE", "FOR", "CONTINUE", 
			"BREAK", "RETURN", "VOID", "FUNCTION", "NEW", "CONST", "VAR", "CLASS", 
			"LCB", "RCB", "SEMI", "COLON", "RARROW", "EQUAL", "COMMA", "INT", "FLOAT", 
			"SIGN", "RB", "LB", "LSB", "RSB", "STRING_OP", "EQ_OP", "NEQ_OP", "LT_OP", 
			"GT_OP", "LEQ_OP", "GEQ_OP", "AND_OP", "OR_OP", "ADD_OP", "SUB_OP", "MUL_OP", 
			"F_DIV_OP", "NOT_OP", "I_DIV_OP", "REM_OP", "BOOL", "DOT", "STRING", 
			"ASSGIN_OP", "INTLIT", "FLOATLIT", "BOOLLIT", "TRUE", "FALSE", "DIM", 
			"STRINGLIT", "WS", "C_COMMENT", "CPP_COMMENT", "ID", "UNCLOSE_STRING", 
			"ILLEGAL_ESCAPE", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CSlang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CSlangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CSlangParser.EOF, 0); }
		public List<ClassdeclContext> classdecl() {
			return getRuleContexts(ClassdeclContext.class);
		}
		public ClassdeclContext classdecl(int i) {
			return getRuleContext(ClassdeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(126);
				classdecl();
				}
				}
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			setState(131);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassdeclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(CSlangParser.CLASS, 0); }
		public TerminalNode LCB() { return getToken(CSlangParser.LCB, 0); }
		public TerminalNode RCB() { return getToken(CSlangParser.RCB, 0); }
		public List<Id_typeContext> id_type() {
			return getRuleContexts(Id_typeContext.class);
		}
		public Id_typeContext id_type(int i) {
			return getRuleContext(Id_typeContext.class,i);
		}
		public List<ClassbodyContext> classbody() {
			return getRuleContexts(ClassbodyContext.class);
		}
		public ClassbodyContext classbody(int i) {
			return getRuleContext(ClassbodyContext.class,i);
		}
		public TerminalNode RARROW() { return getToken(CSlangParser.RARROW, 0); }
		public ClassdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdecl; }
	}

	public final ClassdeclContext classdecl() throws RecognitionException {
		ClassdeclContext _localctx = new ClassdeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classdecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(CLASS);
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(134);
				id_type();
				}
				break;
			case 2:
				{
				{
				setState(135);
				id_type();
				setState(136);
				match(RARROW);
				setState(137);
				id_type();
				}
				}
				break;
			}
			setState(141);
			match(LCB);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 26624L) != 0)) {
				{
				{
				setState(142);
				classbody();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassbodyContext extends ParserRuleContext {
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Funct_declareContext funct_declare() {
			return getRuleContext(Funct_declareContext.class,0);
		}
		public Const_declContext const_decl() {
			return getRuleContext(Const_declContext.class,0);
		}
		public ClassbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classbody; }
	}

	public final ClassbodyContext classbody() throws RecognitionException {
		ClassbodyContext _localctx = new ClassbodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classbody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				{
				setState(150);
				var_decl();
				}
				break;
			case FUNCTION:
				{
				setState(151);
				funct_declare();
				}
				break;
			case CONST:
				{
				setState(152);
				const_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Const_declContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(CSlangParser.CONST, 0); }
		public Full_form_constContext full_form_const() {
			return getRuleContext(Full_form_constContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(CSlangParser.SEMI, 0); }
		public Const_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_decl; }
	}

	public final Const_declContext const_decl() throws RecognitionException {
		Const_declContext _localctx = new Const_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_const_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(CONST);
			setState(156);
			full_form_const();
			setState(157);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Full_form_constContext extends ParserRuleContext {
		public Id_typeContext id_type() {
			return getRuleContext(Id_typeContext.class,0);
		}
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Full_form_constContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_full_form_const; }
	}

	public final Full_form_constContext full_form_const() throws RecognitionException {
		Full_form_constContext _localctx = new Full_form_constContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_full_form_const);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			id_type();
			setState(160);
			identifier_list();
			setState(161);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(CSlangParser.SEMI, 0); }
		public TerminalNode VAR() { return getToken(CSlangParser.VAR, 0); }
		public Short_formContext short_form() {
			return getRuleContext(Short_formContext.class,0);
		}
		public Full_formContext full_form() {
			return getRuleContext(Full_formContext.class,0);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(163);
			match(VAR);
			}
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(164);
				short_form();
				}
				break;
			case 2:
				{
				setState(165);
				full_form();
				}
				break;
			}
			setState(168);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Short_formContext extends ParserRuleContext {
		public Short_identifier_listContext short_identifier_list() {
			return getRuleContext(Short_identifier_listContext.class,0);
		}
		public TerminalNode COLON() { return getToken(CSlangParser.COLON, 0); }
		public Whole_typeContext whole_type() {
			return getRuleContext(Whole_typeContext.class,0);
		}
		public Short_formContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_short_form; }
	}

	public final Short_formContext short_form() throws RecognitionException {
		Short_formContext _localctx = new Short_formContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_short_form);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			short_identifier_list();
			setState(171);
			match(COLON);
			setState(172);
			whole_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Short_identifier_listContext extends ParserRuleContext {
		public Id_typeContext id_type() {
			return getRuleContext(Id_typeContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(CSlangParser.COMMA, 0); }
		public Short_identifier_listContext short_identifier_list() {
			return getRuleContext(Short_identifier_listContext.class,0);
		}
		public Short_identifier_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_short_identifier_list; }
	}

	public final Short_identifier_listContext short_identifier_list() throws RecognitionException {
		Short_identifier_listContext _localctx = new Short_identifier_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_short_identifier_list);
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(174);
				id_type();
				setState(175);
				match(COMMA);
				setState(176);
				short_identifier_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				id_type();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Full_formContext extends ParserRuleContext {
		public Id_typeContext id_type() {
			return getRuleContext(Id_typeContext.class,0);
		}
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Full_formContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_full_form; }
	}

	public final Full_formContext full_form() throws RecognitionException {
		Full_formContext _localctx = new Full_formContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_full_form);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			id_type();
			setState(182);
			identifier_list();
			setState(183);
			expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Identifier_listContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(CSlangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CSlangParser.COMMA, i);
		}
		public Id_typeContext id_type() {
			return getRuleContext(Id_typeContext.class,0);
		}
		public Identifier_listContext identifier_list() {
			return getRuleContext(Identifier_listContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COLON() { return getToken(CSlangParser.COLON, 0); }
		public Whole_typeContext whole_type() {
			return getRuleContext(Whole_typeContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(CSlangParser.EQUAL, 0); }
		public Identifier_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier_list; }
	}

	public final Identifier_listContext identifier_list() throws RecognitionException {
		Identifier_listContext _localctx = new Identifier_listContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_identifier_list);
		try {
			setState(195);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(185);
				match(COMMA);
				setState(186);
				id_type();
				setState(187);
				identifier_list();
				setState(188);
				expr();
				setState(189);
				match(COMMA);
				}
				break;
			case COLON:
				enterOuterAlt(_localctx, 2);
				{
				setState(191);
				match(COLON);
				setState(192);
				whole_type();
				setState(193);
				match(EQUAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expression_listContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(CSlangParser.COMMA, 0); }
		public Expression_listContext expression_list() {
			return getRuleContext(Expression_listContext.class,0);
		}
		public Expression_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_list; }
	}

	public final Expression_listContext expression_list() throws RecognitionException {
		Expression_listContext _localctx = new Expression_listContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expression_list);
		try {
			setState(202);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(197);
				expr();
				setState(198);
				match(COMMA);
				setState(199);
				expression_list();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(201);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public Expr0Context expr0() {
			return getRuleContext(Expr0Context.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(204);
			expr0();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr0Context extends ParserRuleContext {
		public List<Expr1Context> expr1() {
			return getRuleContexts(Expr1Context.class);
		}
		public Expr1Context expr1(int i) {
			return getRuleContext(Expr1Context.class,i);
		}
		public TerminalNode STRING_OP() { return getToken(CSlangParser.STRING_OP, 0); }
		public Expr0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr0; }
	}

	public final Expr0Context expr0() throws RecognitionException {
		Expr0Context _localctx = new Expr0Context(_ctx, getState());
		enterRule(_localctx, 24, RULE_expr0);
		try {
			setState(211);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(206);
				expr1();
				setState(207);
				match(STRING_OP);
				setState(208);
				expr1();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(210);
				expr1();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr1Context extends ParserRuleContext {
		public List<Expr2Context> expr2() {
			return getRuleContexts(Expr2Context.class);
		}
		public Expr2Context expr2(int i) {
			return getRuleContext(Expr2Context.class,i);
		}
		public Compare_opsContext compare_ops() {
			return getRuleContext(Compare_opsContext.class,0);
		}
		public Expr1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr1; }
	}
